# aio-base-backend

./: Cargo.toml  README.md  README_PIXEL_ART_API.md  aio-base-backend.did  dfx.json  finance-prompts.md  frontend_integration_example.js  push-all.sh
src/: account_storage.rs  agent_asset_types.rs  aio_invert_index_types.rs  aio_protocal_types.rs  aio_workledger_types.rs  bitpay.rs  device_types.rs  finance_types.rs  hmac.rs  lib.rs  mcp_asset_types.rs  mining_reword.rs  order_types.rs  orders.rs  pixel_creation_types.rs  society_profile_types.rs  stable_mem_storage.rs  token_economy.rs  token_economy_types.rs  trace_storage.rs  types.rs
