[package]
name = "aio-base-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.14"
ic-cdk-timers = "0.7" 
ic-stable-structures = "0.6"
icrc-ledger-types = "0.1.0"
serde = "1"
serde_json = "1.0"
serde_bytes = "0.11"
serde_cbor = "0.11"
num-traits = "0.2.19"
# Removed getrandom and rand - using IC-native randomness instead

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

# 禁用安全审计
[audit]
ignore = ["*"]
